fix text wrapping

--- a/scss/style.scss
+++ b/scss/style.scss
@@ -29,7 +29,7 @@ body {
 		opacity: 0;
 		transition: all 1000ms linear 200ms;
 		@media (max-width: 380px) {
-			height: 600px;
+			height: 100vh;
 		}
 
 		img {
@@ -45,7 +45,7 @@ body {
 		font-size: 42px;
 		color: #3d5c43;
 		text-align: center;
-		position: absolute;
+		position: fixed;
 		bottom: -30px;
 		left: 50%;
 		transform: translateX(-50%);
